--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -1,4 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
 $playfair-font:
     "Playfair Display"
+
+$open-sans-font:
+    "Open Sans"
+
+$tutorial-color:
+    #4D861F
