--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -5,3 +5,9 @@ body
 
 h1
     font-family: var.$playfair-font
+
+p
+    font-family: var.$open-sans-font
+
+button
+    font-family: var.$open-sans-font
