--- a/src/styles/_components.sass
+++ b/src/styles/_components.sass
@@ -216,3 +216,17 @@
         font-weight: 900
 /* #endregion */
 
+/* #region Searchbar */
+.searchbar
+    display: flex
+    justify-content: center
+    padding: 0 25px
+
+    &__input
+        width: 100%
+        font-size: 1em
+        padding: 1em
+        border: none
+        background-color: #f0f0f0
+        border-radius: 5px
+/* #endregion */
