--- a/src/styles/_components.sass
+++ b/src/styles/_components.sass
@@ -10,7 +10,7 @@
     position: absolute
     top: 0
     left: 0
-    z-index: 4
+    z-index: 5
 
     &__img
         width: 5em
@@ -30,7 +30,7 @@
     position: absolute
     top: 0
     left: 0
-    z-index: 3
+    z-index: 4
     width: 100%
     height: 100vh
     background-color: white
@@ -112,7 +112,7 @@
     position: absolute
     top: 0
     left: 0
-    z-index: 2
+    z-index: 3
     width: 100%
     height: 100vh
     background-color: white
@@ -230,11 +230,13 @@
         border-radius: 5px
 /* #endregion */
 
+/* #region News */
 .news-section
     .news-category
         &:last-child
             border-bottom: 2px solid var.$dark-border
-    
+            margin-bottom: 5em
+
 .news-category
     display: flex
     flex-direction: column
@@ -249,7 +251,7 @@
         img
             width: 4%
             margin-right: 10px
-        
+
         h2
             font-size: 1.4em
             font-weight: 800
@@ -257,7 +259,7 @@
             text-transform: uppercase
             width: 100%
             text-align: start
-        
+
         div
             width: 5%
             font-size: 3em
@@ -278,17 +280,16 @@
 
     &:first-child
         border-top: 2px solid var.$dark-border
-    
+
     &:last-child
         border-bottom: none
-        padding-bottom: 0
 
     &__img
         width: 20%
         height: 20%
         border-radius: 10px
         margin-right: 20px
-    
+
     &__article
         width: 100%
         display: flex
@@ -298,7 +299,39 @@
         h3
             margin-top: 0
             margin-bottom: 3px
-        
+
         p
             margin: 0
             font-size: 0.9em
+/* #endregion */
+
+.nav-section
+    width: 100%
+    position: fixed
+    bottom: 0
+    background-color: white
+    z-index: 2
+    box-shadow: 0 0 10px 5px #00000032
+    padding: 1em 0 1.5em 0
+
+.nav-ul
+    display: flex
+    justify-content: space-around
+    padding: 0
+    margin: 0
+    list-style: none
+    
+    &__li
+        a
+            text-decoration: none
+            text-align: center
+            display: flex
+            flex-direction: column
+            align-items: center
+
+            svg
+                font-size: 1.5em
+
+            p
+                margin: 0
+                font-size: 0.8em
