--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -3,11 +3,11 @@
 body
     margin: 0
 
-h1, h2
-    font-family: var.$playfair-font
+h1, h2, h3, h4
+    font-family: var.$h-font
 
 p
-    font-family: var.$open-sans-font
+    font-family: var.$text-font
 
 button
-    font-family: var.$open-sans-font
+    font-family: var.$text-font
