--- a/src/styles/_components.sass
+++ b/src/styles/_components.sass
@@ -4,6 +4,7 @@
 .startup-logo-section
     width: 100%
     height: 100vh
+    display: flex
     flex-direction: column
     justify-content: center
     background-color: white
@@ -303,6 +304,7 @@
             font-size: 0.9em
 /* #endregion */
 
+/* #region settings */
 .settings-category
     display: flex
     padding: 1.2em 1.5em
@@ -316,7 +318,7 @@
     &__img
         width: 20px
         margin-right: 10px
-    
+
     &__h4
         font-size: 1.1em
         font-weight: 800
@@ -324,7 +326,7 @@
         text-transform: uppercase
         width: 100%
         text-align: start
-    
+
 .Setting-toggle
     width: 80px
     background-color: var.$newsify-green
@@ -332,13 +334,13 @@
     padding: 2px
     border-radius: 20px
     display: flex
-    
+
     &__div
         width: 30px
         height: 30px
         border-radius: 50%
         background-color: white
-
+/* #endregion */
 
 /* #region Nav */
 .nav-section
