--- a/src/styles/_components.sass
+++ b/src/styles/_components.sass
@@ -11,7 +11,7 @@
     position: absolute
     top: 0
     left: 0
-    z-index: 5
+    z-index: 3
 
     &__img
         width: 5em
@@ -31,7 +31,7 @@
     position: absolute
     top: 0
     left: 0
-    z-index: 4
+    z-index: 2
     width: 100%
     height: 100vh
     background-color: white
@@ -113,7 +113,7 @@
     position: absolute
     top: 0
     left: 0
-    z-index: 3
+    z-index: 1
     width: 100%
     height: 100vh
     background-color: white
@@ -232,38 +232,32 @@
 /* #endregion */
 
 /* #region News */
-.news-category
+
+
+.news-section__btn
+    background-color: transparent
     display: flex
-    flex-direction: column
+    border: none
+    border-top: 2px solid var.$dark-border
+    padding: 1em 2em
 
-    &:last-child
-        border-bottom: 2px solid var.$dark-border
-        margin-bottom: 5em
+    img
+        width: 20px
+        margin-right: 10px
 
-    &__btn
-        background-color: transparent
-        display: flex
-        border: none
-        border-top: 2px solid var.$dark-border
-        padding: 1em 2em
+    h2
+        font-size: 1.4em
+        font-weight: 800
+        margin: 0
+        text-transform: uppercase
+        width: 100%
+        text-align: start
 
-        img
-            width: 20px
-            margin-right: 10px
-
-        h2
-            font-size: 1.4em
-            font-weight: 800
-            margin: 0
-            text-transform: uppercase
-            width: 100%
-            text-align: start
-
-        div
-            width: 5%
-            font-size: 3em
-            margin: 0
-            line-height: 20px
+    div
+        width: 5%
+        font-size: 3em
+        margin: 0
+        line-height: 20px
 
 .news-display
     padding: 0
