--- a/src/styles/_components.sass
+++ b/src/styles/_components.sass
@@ -233,7 +233,6 @@
 
 /* #region News */
 
-
 .news-section__btn
     background-color: transparent
     display: flex
@@ -264,12 +263,34 @@
     overflow: hidden
     height: 0
 
+.news-box-section
+    display: flex
+    overflow: scroll
+    white-space: nowrap
+    scroll-snap-type: x mandatory
+
+    &__save-btn
+        border: none
+        font-size: 2em
+        padding: 0 1.3em
+        border-top: 2px solid var.$dark-border
+        background-color: #46781B
+        color: white
+        scroll-snap-stop: always
+        scroll-snap-align: end
+    
+    &::-webkit-scrollbar 
+        display: none
+
+
 .news-box
     display: flex
+    width: 100vw
     padding: 1em 1.5em 1em 1.5em
     text-decoration: none
     color: black
-    border-bottom: 1px solid var.$dark-border
+    scroll-snap-stop: always
+    scroll-snap-align: start
 
     &:first-child
         border-top: 2px solid var.$dark-border
@@ -278,16 +299,16 @@
         border-bottom: none
 
     &__img
-        width: 20%
-        height: 20%
+        width: 4.8em
         border-radius: 10px
         margin-right: 20px
 
     &__article
-        width: 100%
+        width: calc( 100vw - 139.19px )
         display: flex
         flex-direction: column
         justify-content: center
+        text-wrap: wrap
 
         h3
             margin-top: 0
