--- a/src/styles/_components.sass
+++ b/src/styles/_components.sass
@@ -232,8 +232,8 @@
 /* #endregion */
 
 /* #region News */
-
-.news-section__btn
+.news-section__btn, .popular-section__btn
+    width: 100%
     background-color: transparent
     display: flex
     border: none
@@ -304,7 +304,7 @@
         margin-right: 20px
 
     &__article
-        width: calc( 100vw - 139.19px )
+        width: calc( 100vw - 145px )
         display: flex
         flex-direction: column
         justify-content: center
@@ -313,10 +313,11 @@
         h3
             margin-top: 0
             margin-bottom: 3px
+            font-size: 4.4vw
 
         p
             margin: 0
-            font-size: 0.9em
+            font-size: 3.4vw
 /* #endregion */
 
 /* #region settings */
