--- a/src/styles/_layout.sass
+++ b/src/styles/_layout.sass
@@ -7,6 +7,10 @@
     &:last-of-type
         border-bottom: 2px solid var.$dark-border
         margin-bottom: 5em
+
+.popular-section
+    &:last-of-type
+        border-bottom: 2px solid var.$dark-border
     
 .settings-section
 
