--- a/src/styles/_components.sass
+++ b/src/styles/_components.sass
@@ -58,6 +58,7 @@
         text-align: center
         padding: 0 2em
         margin-bottom: 3em
+        background-color: white
 
         h1
             font-size: 2.2em
@@ -72,7 +73,8 @@
 .slider-dots
     display: flex
     justify-content: center
-    margin-bottom: 3em
+    padding-bottom: 3em
+    background-color: white
 
     &__span
         width: 14px
@@ -86,11 +88,13 @@
     display: flex
     justify-content: space-between
     padding: 0 1em
+    background-color: white
 
     button
         font-weight: 500
         font-size: 1em
         width: 45%
+        margin-bottom: 1em
 
     &__skip
         border: 1.5px solid var.$newsify-green
