--- a/src/styles/_layout.sass
+++ b/src/styles/_layout.sass
@@ -11,6 +11,7 @@
 .popular-section
     &:last-of-type
         border-bottom: 2px solid var.$dark-border
+        margin-bottom: 5em
     
 .settings-section
 
@@ -39,4 +40,5 @@
         font-size: 1.5em
         color: var.$newsify-green
         margin: 0 1em
+        margin-bottom: 5em
         font-weight: 500
