--- a/src/styles/_components.sass
+++ b/src/styles/_components.sass
@@ -83,6 +83,24 @@
         border-radius: 50%
         margin: 0 5px
 
+    &__slider-page
+        width: 0
+        height: 0
+
+        div
+            position: relative
+            width: 120px
+            height: 14px
+            right: 120px
+            display: flex
+
+            span
+                width: 62px
+                height: 14px
+                background-color: var.$newsify-green
+                border-radius: 10px
+                margin: 0 5px
+
 .slider-btns
     text-align: center
     display: flex
