--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -15,3 +15,10 @@ p
 
 button
     font-family: var.$text-font
+
+html[data-theme="light"] 
+  color-scheme: light
+
+
+html[data-theme="dark"] 
+  color-scheme: dark
