--- a/src/styles/_components.sass
+++ b/src/styles/_components.sass
@@ -111,6 +111,9 @@
         width: 45%
         margin-bottom: 1em
 
+        &:active
+            filter: brightness(130%)
+
     &__skip
         border: 1.5px solid var.$newsify-green
         border-radius: 30px
@@ -154,6 +157,8 @@
         width: 85%
         color: white
         margin-bottom: 2em
+        &:active
+            filter: brightness(130%)
 
 .login-logo
     display: flex
@@ -308,6 +313,9 @@
         color: white
         scroll-snap-stop: always
         scroll-snap-align: end
+
+        &:active
+            filter: brightness(130%)
     
     &::-webkit-scrollbar 
         display: none
