--- a/src/styles/_components.sass
+++ b/src/styles/_components.sass
@@ -57,7 +57,7 @@
     &__figcaption
         text-align: center
         padding: 0 2em
-        margin-bottom: 3em
+        margin-bottom: 5.5vh
 
         h2
             font-size: 2.2em
@@ -72,7 +72,7 @@
 .slider-dots
     display: flex
     justify-content: center
-    margin-bottom: 3em
+    margin-bottom: 5.5vh
 
     &__span
         width: 14px
@@ -144,7 +144,7 @@
     &__p
         font-size: 1.1em
         margin-top: 0
-        margin-bottom: 3em
+        margin-bottom: 6vh
         padding: 0 10px
 
     &__sign-in
@@ -164,7 +164,7 @@
     display: flex
     flex-direction: column
     align-items: center
-    margin: 8vh 0 3em 0
+    margin: 7vh 0 5.5vh 0
 
     &__img
         width: 20%
@@ -179,7 +179,7 @@
     display: flex
     flex-direction: column
     padding: 0 30px
-    margin-bottom: 3em
+    margin-bottom: 5.5vh
 
     button
         padding: 1.2em 0
@@ -196,7 +196,7 @@
     display: flex
     padding: 0 20px
     align-items: center
-    margin-bottom: 3em
+    margin-bottom: 5.5vh
 
     &__line
         width: 40%
@@ -209,6 +209,7 @@
 .sign-up
     display: flex
     justify-content: center
+    margin-bottom: 1.5em
 
     &__p
         margin: 0
@@ -228,7 +229,7 @@
     justify-content: center
     align-items: center
     margin-top: 1.5em
-    margin-bottom: 2em
+    margin-bottom: 3.5vh
 
     &__img
         width: 20px
