--- a/src/styles/_layout.sass
+++ b/src/styles/_layout.sass
@@ -21,7 +21,7 @@
         font-size: 2em
         font-family: var.$text-font
         margin-top: 0
-        margin-bottom: 20px
+        margin-bottom: 2.5vh
 
     &__h3
         text-align: center
@@ -29,7 +29,7 @@
         font-family: var.$text-font
         font-weight: 500
         margin-top: 0
-        margin-bottom: 2em
+        margin-bottom: 4.8vh
 
     &__darkmode
         width: calc( 100% - 2em )
