--- a/src/styles/_components.sass
+++ b/src/styles/_components.sass
@@ -365,16 +365,17 @@
 .news-box, .popular-news-box
     display: flex
     width: 100vw
-    padding: 1em 1.5em 1em 1.5em
+    padding: 1em 1.3em 1em 1.3em
     text-decoration: none
     color: light-dark(black, white)
     scroll-snap-stop: always
     scroll-snap-align: start
 
     &__img
-        width: 4.8em
-        border-radius: 10px
+        width: 5.3em
+        border-radius: 7px
         margin-right: 20px
+        aspect-ratio: 1/1
 
     &__article
         width: calc( 100vw - 145px )
