--- a/src/styles/_components.sass
+++ b/src/styles/_components.sass
@@ -331,6 +331,8 @@
     padding: 0
     overflow: hidden
     height: 0
+    margin: 0
+    list-style: none
 
 .news-box-section
     display: flex
