--- a/src/styles/_layout.sass
+++ b/src/styles/_layout.sass
@@ -1,17 +1,10 @@
 @use "variables" as var
 
-.news-section, .archive-section
+.news-section, .archive-section, .popular-section
     display: flex
     flex-direction: column
-
-    &:last-of-type
-        border-bottom: 2px solid var.$dark-border
-        margin-bottom: 5em
-
-.popular-section
-    &:last-of-type
-        border-bottom: 2px solid var.$dark-border
-        margin-bottom: 5em
+    border-bottom: 2px solid var.$dark-border
+    margin-bottom: 5em
     
 .settings-section
 
