--- a/src/styles/_components.sass
+++ b/src/styles/_components.sass
@@ -239,6 +239,11 @@
         margin: 0
         font-size: 1.5em
         font-weight: 900
+
+.nyt-logo
+    position: absolute
+    top: 25px
+    left: 0
 /* #endregion */
 
 /* #region Searchbar */
