--- a/src/styles/_components.sass
+++ b/src/styles/_components.sass
@@ -332,7 +332,7 @@
         margin: 0
         line-height: 20px
 
-.news-display
+.news-display, .search-display
     padding: 0
     overflow: hidden
     height: 0
@@ -369,7 +369,7 @@
         display: none
 
 
-.news-box, .popular-news-box
+.news-box, .popular-news-box, .search-news-box
     display: flex
     width: 100vw
     padding: 1em 1.3em 1em 1.3em
